--- a/index.html
+++ b/index.html
@@ -2,9 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/x-icon" href="/src/assets/blacklogo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Donavin Martin | Software Engineer</title>
+    <meta
+      name="description"
+      content="Donavin Martin Oklahoma City Software Engineer"
+    />
   </head>
   <body>
     <div id="root"></div>
